[metadata]
name = anedya-dev-sdk
version = 0.0.8
url = https://github.com/anedyaio/anedya-dev-sdk-pyhton
author = Anedya Systems
author_email = support@anedya.io
description = Anedya python based SDK for IoT devices. This SDK is currently under development. Future versions may include breaking changes.
long_description = file: README.md
license = Apache License 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.anedya.io
    Release notes = https://github.com/anedyaio/anedya-dev-sdk-pyhton
    Source = https://github.com/anedyaio/anedya-dev-sdk-pyhton

[bdist_wheel]
universal = 1

[flake8]
# For the definitions of error codes, see
# - https://flake8.pycqa.org/en/latest/user/error-codes.html
# - https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes

# why: long lines are handled by black
ignore = E501
