[metadata]
name = anedya-dev-sdk
version = 0.1.3
url = https://github.com/anedyaio/anedya-dev-sdk-pyhton
author = Anedya Systems
author_email = support@anedya.io
description = Anedya python based SDK for IoT devices. This SDK streamlines connectivity with Anedya platform. As this SDK is in Beta release, future versions may have breaking changes.
long_description = file: README.md
requires_python = ">=3.7"
dependencies = ["requests","paho-mqtt>=2.0.0"]
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.anedya.io
    Release notes = https://github.com/anedyaio/anedya-dev-sdk-pyhton
    Source = https://github.com/anedyaio/anedya-dev-sdk-pyhton

[bdist_wheel]
universal = 1

[options]
install_requires =
    requests
    paho-mqtt >= 2.0.0

[flake8]
# For the definitions of error codes, see
# - https://flake8.pycqa.org/en/latest/user/error-codes.html
# - https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
max-line-length = 120
# why: long lines are handled by black
ignore = E501
