[metadata]
name = anedya-sdk
version = 0.1.0
author = Saransh Jaiswal
author_email = saranshjaiswal09@gmail.com
description = Anedya SDK for IoT devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
license = Apache License 2.0
license_files = LICENSE.txt

[options]
packages = find:
install_requires =
    requests

[options.packages.find]
where = anedya_sdk

